--- a/VisualCrypt.Desktop/Views/ShellWindow.xaml
+++ b/VisualCrypt.Desktop/Views/ShellWindow.xaml
@@ -95,51 +95,51 @@
                 <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miVCSettings,Mode=OneWay}" Command="{Binding ShowSettingsDialogCommand}"
                           InputGestureText="Ctrl+Shift+P" />
             </MenuItem>
-            <MenuItem Header="_Edit">
-                <MenuItem Header="_Undo" Command="Undo" CommandTarget="{Binding ElementName=TextBox1}" />
-                <MenuItem Header="_Redo" Command="Redo" CommandTarget="{Binding ElementName=TextBox1}" />
+            <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEdit,Mode=OneWay}">
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditUndo,Mode=OneWay}" Command="Undo" CommandTarget="{Binding ElementName=TextBox1}" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditRedo,Mode=OneWay}" Command="Redo" CommandTarget="{Binding ElementName=TextBox1}" />
                 <Separator />
-                <MenuItem Header="Cu_t" Command="Cut" CommandTarget="{Binding ElementName=TextBox1}" />
-                <MenuItem Header="_Copy" Command="Copy" CommandTarget="{Binding ElementName=TextBox1}" />
-                <MenuItem Header="_Paste" Command="Paste" CommandTarget="{Binding ElementName=TextBox1}" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditCut,Mode=OneWay}" Command="Cut" CommandTarget="{Binding ElementName=TextBox1}" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditCopy,Mode=OneWay}" Command="Copy" CommandTarget="{Binding ElementName=TextBox1}" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditPaste,Mode=OneWay}" Command="Paste" CommandTarget="{Binding ElementName=TextBox1}" />
                 <Separator />
-                <MenuItem Header="_Find..." Command="commands:EditorCommands.Find" InputGestureText="Ctrl+F" />
-                <MenuItem Header="Find _Next" Command="commands:EditorCommands.FindNext" InputGestureText="F3" />
-                <MenuItem Header="Find _Previous" Command="commands:EditorCommands.FindPrevious"
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditFind,Mode=OneWay}" Command="commands:EditorCommands.Find" InputGestureText="Ctrl+F" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditFindNext,Mode=OneWay}" Command="commands:EditorCommands.FindNext" InputGestureText="F3" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditFindPrevious,Mode=OneWay}" Command="commands:EditorCommands.FindPrevious"
                           InputGestureText="Shift+F3" />
-                <MenuItem Header="_Replace..." Command="commands:EditorCommands.Replace" InputGestureText="Ctrl+H" />
-                <MenuItem Header="_Delete Line" Command="commands:EditorCommands.DeleteLine"
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditReplace,Mode=OneWay}" Command="commands:EditorCommands.Replace" InputGestureText="Ctrl+H" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditDeleteLine,Mode=OneWay}" Command="commands:EditorCommands.DeleteLine"
                           InputGestureText="Shift+Del" />
-                <MenuItem Header="_Go To..." Command="commands:EditorCommands.GoTo" InputGestureText="Ctrl+G" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditGoTo,Mode=OneWay}" Command="commands:EditorCommands.GoTo" InputGestureText="Ctrl+G" />
                 <Separator />
-                <MenuItem Header="Select _All" Command="SelectAll" CommandTarget="{Binding ElementName=TextBox1}" />
-                <MenuItem Header="_Insert Date, Time" Command="commands:EditorCommands.InsertDate"
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditSelectAll,Mode=OneWay}" Command="SelectAll" CommandTarget="{Binding ElementName=TextBox1}" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miEditInsertDateTime,Mode=OneWay}" Command="commands:EditorCommands.InsertDate"
                           InputGestureText="F5, F5" />
             </MenuItem>
-            <MenuItem Header="F_ormat">
-                <MenuItem Header="_Word Wrap" IsCheckable="True"
+            <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miFormat,Mode=OneWay}">
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miFormatWordWrap,Mode=OneWay}" IsCheckable="True"
                           IsChecked="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsWordWrapChecked, Mode=TwoWay}"
                           InputGestureText="Ctrl+W" />
-                <MenuItem Header="Check Spe_lling" IsCheckable="True"
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miFormatCheckSpelling,Mode=OneWay}" IsCheckable="True"
                           IsChecked="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsSpellCheckingChecked, Mode=TwoWay}"
                           InputGestureText="Ctrl+L" />
-                <MenuItem Header="_Font..." Command="commands:EditorCommands.Font" InputGestureText="Ctrl+Alt+F" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miFormatFont,Mode=OneWay}" Command="commands:EditorCommands.Font" InputGestureText="Ctrl+Alt+F" />
             </MenuItem>
-            <MenuItem Header="_View">
-                <MenuItem Header="_Status Bar" IsCheckable="True"
+            <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miView,Mode=OneWay}">
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miViewStatusBar,Mode=OneWay}" IsCheckable="True"
                           IsChecked="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsStatusBarChecked, Mode=TwoWay}"
                           InputGestureText="F12" />
-                <MenuItem Header="_Tool Area" IsCheckable="True"
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miViewToolArea,Mode=OneWay}" IsCheckable="True"
                           IsChecked="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsToolAreaChecked, Mode=TwoWay}"
                           InputGestureText="ESC" />
-                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miLanguage,Mode=OneWay}">
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miViewLanguage,Mode=OneWay}">
                    <MenuItem Header="English" Command="{Binding SwitchLanguageCommand}" CommandParameter="EN" IsChecked="{Binding Source={x:Static portable:Loc.Strings}, Path=IsEN, Mode=OneWay}"></MenuItem>
                     <MenuItem Header="Deutsch" Command="{Binding SwitchLanguageCommand}" CommandParameter="DE" IsChecked="{Binding Source={x:Static portable:Loc.Strings}, Path=IsDE,Mode=OneWay}"></MenuItem>
                </MenuItem>
                 <MenuItem
                     Header="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=ZoomLevelMenuText}">
-                    <MenuItem Header="Zoom _in" InputGestureText="Ctrl +" Command="commands:EditorCommands.ZoomIn" />
-                    <MenuItem Header="Zoom _out" InputGestureText="Ctrl -" Command="commands:EditorCommands.ZoomOut" />
+                    <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miViewZoomIn,Mode=OneWay}" InputGestureText="Ctrl +" Command="commands:EditorCommands.ZoomIn" />
+                    <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miViewZoomOut,Mode=OneWay}" InputGestureText="Ctrl -" Command="commands:EditorCommands.ZoomOut" />
                     <Separator />
                     <MenuItem Header="1_00%" InputGestureText="Ctrl+0" IsCheckable="false"
                               IsChecked="{Binding Source={x:Static state:SettingsManager.EditorSettings}, Path=IsZoom100Checked, Mode=OneWay}"
@@ -148,11 +148,11 @@
 
             </MenuItem>
 
-            <MenuItem Header="_Help">
-                <MenuItem Header="View _Help Online" Command="{Binding HelpCommand}" InputGestureText="F1" />
-                <MenuItem Header="_Log" Command="{Binding LogCommand}" InputGestureText="F9" />
+            <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miHelp,Mode=OneWay}">
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miHelpViewOnline,Mode=OneWay}" Command="{Binding HelpCommand}" InputGestureText="F1" />
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miHelpLog,Mode=OneWay}" Command="{Binding LogCommand}" InputGestureText="F9" />
                 <Separator />
-                <MenuItem Header="_About VisualCrypt Editor" Command="{Binding AboutCommand}"
+                <MenuItem Header="{Binding  Source={x:Static portable:Loc.Strings}, Path=miHelpAbout,Mode=OneWay}" Command="{Binding AboutCommand}"
                           InputGestureText="Shift+F1" />
             </MenuItem>
         </Menu>
